# to_skip_or_not

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_medical_image_experiments.sh  run_synthetic_image_experiments.sh  run_texture_experiments.sh  setup.py  test_generate_figures.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: clinical-robustness-dsc.ipynb  clinical-robustness-hd.ipynb  clinical-robustness-ranking-by-metric.ipynb  clinical-robustness-surface-distance.ipynb  clinical-robustness-surface-dsc.ipynb  figure_4_synthetic_performance_MICCAI.py  figures_for_clinical_robustness.py  figures_for_synthetic_robustness.py  generate-sustainability-table.ipynb  histogram-of-modified-textures-busi.ipynb  histogram-of-modified-textures-glas.ipynb  histogram-of-modified-textures-heart.ipynb  histogram-of-modified-textures-spleen.ipynb  interpretability-analysis.ipynb  plot-synthetic-performance-differences.ipynb  synthetic-robustness-dsc.ipynb  synthetic-robustness-dsc.py  synthetic-robustness-hd.ipynb  synthetic-robustness-hd.py  synthetic-robustness-heatmap.ipynb  synthetic-robustness-sdsc.ipynb  synthetic-robustness-sdsc.py  synthetic-robustness-surfdist.ipynb  synthetic-robustness-surfdist.py  table_1_robustness_rankings.py  table_3_train_time_analysis.py  validate-data.ipynb
reports/: robustness-ranking.txt
test/: features_transforms.py
toskipornot/: msd_braintumor_training.py  msd_heart_inference.py  msd_heart_training.py  msd_spleen_inference.py  (+7 more)
toskipornot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+491 files in other folders)
